syntax = "proto3";
package kratos.api;

option go_package = "storage/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  string env = 1;
  Log log = 2;
  Sentry sentry = 3;
  Metrics metrics = 4;
  Server server = 5;
  Data data = 6;
  Auth auth = 7;
  Storage storage = 8;
  Client client = 9;
  S3 s3 = 10;
}

message Log {
  string level = 1;
}

message Sentry {
  bool enabled = 1;
  string dsn = 2;
  string level = 3;
  string flushTimeout = 4;
}

message Metrics {
  string address = 1;
  bool mute = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
}

message Data {
  message Database {
    enum Migrate {
      none = 0;
      soft = 1;
      hard = 2;
    }
    string driver = 1;
    string source = 2;
    Migrate migrate = 3;
    bool debug = 4;
  }
  Database database = 1;
}

message Auth {
  message JWT {
    string secret = 1;
  }
  JWT jwt = 1;
}

message Storage {
  string path = 1;
}

message Client {
  message Config {
    string endpoint = 1;
    google.protobuf.Duration timeout = 2;
  }
  message GRPC {
    Config auth = 1;
  }
  GRPC grpc = 1;
}

message S3 {
  message Config {
    string endpoint = 1;
    string bucketLocation = 2;
    string bucketName = 3;
    string accessKeyID = 4;
    string secretAccessKey = 5;
  }
  string current = 1;
  Config yandex = 2;
  Config vk = 3;
}
